Fix Prize button overlap

--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@
 
 .puzzle-ui {
   margin: -750px 0 0 20;
-  height: 200px;
+  height: 100px;
   z-index: 10000;
 }
 
